# tensorrt-ssd-easy

./: CMakeLists.txt  README.md  main.cpp  testModel.py
bld/: CMakeCache.txt  Makefile  cmake_install.cmake
bld/Gadde/include/: pluginImplement.h  tensorNet.h
tensorRTplugin/: kernel.cu  mathFunctions.cu  pluginImplement.cpp  pluginImplement.h  tensorNet.cpp
util/: loadImage.cpp
